added github link and author link and theme icon in about popup, added url validation, and clearlinkform in script,

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <h3>About AquaWave</h3>
 
                 <div class="about-section">
-                    <h4>🌊 AquaWave Theme</h4>
+                    <h4><img src="./icons/icon16.png" alt="Aquawave logo"> AquaWave Theme</h4>
                     <p>
                         A beautiful, privacy-friendly browser homepage featuring
                         elegant animated waves, customizable categories, and a
@@ -198,11 +198,11 @@
 
                 <div class="about-section">
                     <h4>👨‍💻 Author & Open Source</h4>
-                    <p>Created with ❤️ by the open source community</p>
+                    <p>Created with ❤️ by <a id="author-link" href="https://dsourav.com">Sourav Dutta</a></p>
                     <p>Licensed under MIT License</p>
                     <div class="github-link">
                         <a
-                            href="https://github.com/yourusername/aquawave-theme"
+                            href="https://github.com/dsouravcom/aquawave-ext"
                             target="_blank"
                             rel="noopener noreferrer"
                         >
